Updated TF Noise removal with extra layers

--- a/Tensorflow_/noise_removal/video_to_images.ipynb
+++ b/Tensorflow_/noise_removal/video_to_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_path = f\"D:/digital_enhancement/video.mp4\"\n",
-    "output_path = f\"D:/digital_enhancement/images\"  "
+    "# video_path = r\"D:\\digital_enhancement\\InputVideos\\Ganesh Sends A Messenger _ Vighnaharta Ganesh - Ep 143 _ Full Episode _ 16 March 2022.mp4\"\n",
+    "# video_path = r\"D:\\digital_enhancement\\InputVideos\\Vighnaharta Ganesh - Ep 144 - Full Episode - 13th March, 2018.mp4\"\n",
+    "# video_path = r\"D:\\digital_enhancement\\InputVideos\\Vighnaharta Ganesh - विघ्नहर्ता  गणेश - Ep 01 - 22nd August, 2017.mp4\"\n",
+    "video_path = r\"D:\\digital_enhancement\\InputVideos\\Vighnaharta Ganesh - विघ्नहर्ता गणेश - Ep 05 - 28th August, 2017.mp4\"\n",
+    "output_path = f\"D:/digital_enhancement/images/training_images\"  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\digital_enhancement\\InputVideos\\Vighnaharta Ganesh - विघ्नहर्ता गणेश - Ep 05 - 28th August, 2017.mp4 553\n"
+     ]
+    }
+   ],
    "source": [
     "cap = cv2.VideoCapture(video_path)\n",
     " \n",
@@ -34,27 +45,40 @@
     " \n",
     "# Read until video is completed\n",
     "counter = 0 \n",
+    "file_pointer = 0\n",
     "while(cap.isOpened()):\n",
     "  # Capture frame-by-frame\n",
     "  ret, frame = cap.read()\n",
     "  if ret == True:\n",
-    "      cv2.imwrite(f\"{output_path}\\image_{counter}.jpg\", frame)\n",
-    "      counter += 10\n",
-    "      cap.set(cv2.CAP_PROP_POS_FRAMES, counter)\n",
+    "      cv2.imwrite(f\"{output_path}\\image4_{counter}.jpg\", frame)\n",
+    "      counter += 1\n",
+    "      file_pointer += 60\n",
+    "      cap.set(cv2.CAP_PROP_POS_FRAMES, file_pointer)\n",
     "  # Break the loop\n",
     "  else: \n",
     "    break\n",
+    "  \n",
+    "  if counter == 1000:\n",
+    "    break\n",
+    "  \n",
     " \n",
     "# When everything done, release the video capture object\n",
-    "cap.release()\n"
+    "cap.release()\n",
+    "\n",
+    "print(video_path, counter)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# D:\\digital_enhancement\\InputVideos\\Ganesh Sends A Messenger _ Vighnaharta Ganesh - Ep 143 _ Full Episode _ 16 March 2022.mp4 778\n",
+    "# D:\\digital_enhancement\\InputVideos\\Vighnaharta Ganesh - Ep 144 - Full Episode - 13th March, 2018.mp4 777\n",
+    "# D:\\digital_enhancement\\InputVideos\\Vighnaharta Ganesh - विघ्नहर्ता  गणेश - Ep 01 - 22nd August, 2017.mp4 1000\n",
+    "# D:\\digital_enhancement\\InputVideos\\Vighnaharta Ganesh - विघ्नहर्ता गणेश - Ep 05 - 28th August, 2017.mp4 553"
+   ]
   }
  ],
  "metadata": {
@@ -73,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
