--- a/Tensorflow_/TF_Layers.ipynb
+++ b/Tensorflow_/TF_Layers.ipynb
@@ -5,7 +5,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf \n",
+    "import tensorflow_addons as tfa \n",
+    "import numpy as np "
+   ]
   }
  ],
  "metadata": {
