--- a/Tensorflow_/TF_Layers.ipynb
+++ b/Tensorflow_/TF_Layers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,29 +16,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read Image \n",
+    "\n",
+    "# img = tf.io.decode_jpeg(tf.io.read_file('D:\\digital_enhancement\\images\\kk\\image_170.jpg'))\n",
+    "path = r'D:\\data\\cartoonset10k_rgb\\cs10000053986926948907.jpg'\n",
+    "img = tf.io.decode_jpeg(tf.io.read_file('D:\\data\\cartoonset10k_rgb\\cs10000053986926948907.jpg'))\n",
+    "# img = tf.image.resize(img,[72*2,128*2])\n",
+    "# img = img[tf.newaxis,...]\n",
+    "# img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = tf.keras.preprocessing.image.load_img(path)\n",
+    "\n",
+    "# Convert the image to a tensor and preprocess it\n",
+    "image_tensor = tf.keras.preprocessing.image.img_to_array(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([1, 144, 256, 3])"
+       "(PIL.JpegImagePlugin.JpegImageFile, numpy.ndarray)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read Image \n",
-    "\n",
-    "# img = tf.io.decode_jpeg(tf.io.read_file('D:\\digital_enhancement\\images\\kk\\image_170.jpg'))\n",
-    "img = tf.io.decode_jpeg(tf.io.read_file('D:\\data\\cartoonset10k_rgb\\cs10000053986926948907.jpg'))\n",
-    "img = tf.image.resize(img,[72*2,128*2])\n",
-    "img = img[tf.newaxis,...]\n",
-    "img.shape"
+    "type(image), type(image_tensor)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.framework.ops.EagerTensor"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         ...,\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.]],\n",
+       "\n",
+       "        [[255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         ...,\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.]],\n",
+       "\n",
+       "        [[255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         ...,\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         ...,\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.]],\n",
+       "\n",
+       "        [[255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         ...,\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.]],\n",
+       "\n",
+       "        [[255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         ...,\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.],\n",
+       "         [255., 255., 255.]]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
