Pix2Pix image upscaling

--- a/Tensorflow_/Video_SR/pix_2_pix.ipynb
+++ b/Tensorflow_/Video_SR/pix_2_pix.ipynb
@@ -9,10 +9,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-15 18:44:09.024113: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "2023-05-20 08:11:03.389110: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-15 18:44:09.115828: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-05-15 18:44:09.148430: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2023-05-20 08:11:03.722191: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-05-20 08:11:03.823539: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -33,22 +33,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-15 18:44:20.401189: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "2023-05-20 08:11:07.060663: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-15 18:44:21.664182: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-20 08:11:08.425566: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2023-05-15 18:44:21.668883: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-20 08:11:08.436187: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2023-05-15 18:44:21.669283: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-20 08:11:08.436425: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2023-05-15 18:44:22.200184: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-20 08:11:09.359995: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2023-05-15 18:44:22.200686: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-20 08:11:09.361080: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2023-05-15 18:44:22.200700: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1700] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
-      "2023-05-15 18:44:22.201126: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-20 08:11:09.361101: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1700] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2023-05-20 08:11:09.361639: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2023-05-15 18:44:22.201201: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 5400 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3070 Ti Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "2023-05-20 08:11:09.361676: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 5400 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3070 Ti Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     },
     {
@@ -70,7 +70,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-20 08:11:09.404662: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.405029: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.405296: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.405749: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.405768: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1700] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2023-05-20 08:11:09.406049: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.406093: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 5400 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3070 Ti Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/device:GPU:0'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = tf.test.gpu_device_name()\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# devices = tf.config.list_physical_devices('GPU')\n",
+    "# devices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +174,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-20 08:11:09.753628: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.753988: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.754245: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.754859: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.755173: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.755413: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.755948: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.755965: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1700] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2023-05-20 08:11:09.756240: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:966] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-20 08:11:09.756268: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 5400 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3070 Ti Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
     "resized_frame, original_frame = read_random_frame(path)\n",
     "\n"
@@ -135,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +218,7 @@
        "(TensorShape([1, 180, 320, 3]), TensorShape([1, 720, 1280, 3]))"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,16 +249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "upscale.compile(optimizer='adam', loss='mse', metrics=['accuracy'])"
+    "upscale.compile(optimizer= tf.keras.optimizers.Adam(learning_rate=0.05), loss='mse', metrics=['mse'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get number of learnable parameters\n",
+    "# upscale.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,36 +290,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_32154/1875622962.py:1: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
-      "  upscale.fit_generator(generator(), steps_per_epoch=100, epochs=10)\n"
+      "/tmp/ipykernel_343/632153096.py:2: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+      "  upscale.fit_generator(generator(), steps_per_epoch=100, epochs=20)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "100/100 [==============================] - 8s 65ms/step - loss: 17630.1465 - accuracy: 0.4145\n",
-      "Epoch 2/10\n",
-      "100/100 [==============================] - 6s 62ms/step - loss: 19413.6738 - accuracy: 0.4079\n",
-      "Epoch 3/10\n",
-      "100/100 [==============================] - 6s 61ms/step - loss: 19188.8281 - accuracy: 0.3347\n",
-      "Epoch 4/10\n",
-      "100/100 [==============================] - 6s 61ms/step - loss: 16744.7441 - accuracy: 0.4322\n",
-      "Epoch 5/10\n",
-      " 91/100 [==========================>...] - ETA: 0s - loss: 17147.0742 - accuracy: 0.4220"
+      "Epoch 1/20\n",
+      "100/100 [==============================] - 7s 67ms/step - loss: 18670.6680 - mse: 18670.6660\n",
+      "Epoch 2/20\n",
+      "100/100 [==============================] - 7s 68ms/step - loss: 17737.5273 - mse: 17737.5234\n",
+      "Epoch 3/20\n",
+      "100/100 [==============================] - 7s 67ms/step - loss: 19633.5312 - mse: 19633.5312\n",
+      "Epoch 4/20\n",
+      "100/100 [==============================] - 7s 65ms/step - loss: 17216.7324 - mse: 17216.7344\n",
+      "Epoch 5/20\n",
+      "100/100 [==============================] - 7s 66ms/step - loss: 17728.0742 - mse: 17728.0762\n",
+      "Epoch 6/20\n",
+      "100/100 [==============================] - 7s 70ms/step - loss: 17921.6797 - mse: 17921.6777\n",
+      "Epoch 7/20\n",
+      "100/100 [==============================] - 7s 72ms/step - loss: 18510.9336 - mse: 18510.9355\n",
+      "Epoch 8/20\n",
+      "100/100 [==============================] - 7s 66ms/step - loss: 17875.8730 - mse: 17875.8750\n",
+      "Epoch 9/20\n",
+      "100/100 [==============================] - 7s 67ms/step - loss: 17111.0645 - mse: 17111.0684\n",
+      "Epoch 10/20\n",
+      "100/100 [==============================] - 7s 72ms/step - loss: 17330.2891 - mse: 17330.2910\n",
+      "Epoch 11/20\n",
+      "100/100 [==============================] - 7s 70ms/step - loss: 17436.8242 - mse: 17436.8242\n",
+      "Epoch 12/20\n",
+      "100/100 [==============================] - 7s 70ms/step - loss: 17884.3574 - mse: 17884.3594\n",
+      "Epoch 13/20\n",
+      "100/100 [==============================] - 7s 74ms/step - loss: 17766.6191 - mse: 17766.6152\n",
+      "Epoch 14/20\n",
+      "100/100 [==============================] - 7s 72ms/step - loss: 17664.7500 - mse: 17664.7480\n",
+      "Epoch 15/20\n",
+      "100/100 [==============================] - 9s 89ms/step - loss: 18929.5293 - mse: 18929.5273\n",
+      "Epoch 16/20\n",
+      "100/100 [==============================] - 9s 92ms/step - loss: 17654.8066 - mse: 17654.8105\n",
+      "Epoch 17/20\n",
+      "100/100 [==============================] - 8s 84ms/step - loss: 18375.8438 - mse: 18375.8457\n",
+      "Epoch 18/20\n",
+      "100/100 [==============================] - 9s 86ms/step - loss: 17564.0312 - mse: 17564.0371\n",
+      "Epoch 19/20\n",
+      "100/100 [==============================] - 8s 80ms/step - loss: 16654.8594 - mse: 16654.8594\n",
+      "Epoch 20/20\n",
+      "100/100 [==============================] - 8s 83ms/step - loss: 17188.7578 - mse: 17188.7578\n"
      ]
     }
    ],
    "source": [
-    "upscale.fit_generator(generator(), steps_per_epoch=100, epochs=10)"
+    "with tf.device(device):\n",
+    "    upscale.fit_generator(generator(), steps_per_epoch=100, epochs=20)"
    ]
   },
   {
